fixed dark mode search

--- a/react-app/src/components/Order/Order.css
+++ b/react-app/src/components/Order/Order.css
@@ -50,17 +50,4 @@
   }
 
 
-  [data-theme='dark'] {
-    --background: #282c34;
-    --primary: white;
-  }
-
-  body {
-    background-color: var(--background);
-    color: var(--primary);
-  }
-
-  [data-theme='dark'] .search-result-details {
-    background-color: #282c34;
-    color: #fff;
-  }
+ 
