--- a/react-app/src/components/Search/search.css
+++ b/react-app/src/components/Search/search.css
@@ -37,3 +37,18 @@
   font-weight: bold;
   margin: 1rem 0;
 }
+
+[data-theme='dark'] {
+  --background: #282c34;
+  --primary: white;
+}
+
+body {
+  background-color: var(--background);
+  color: var(--primary);
+}
+
+[data-theme='dark'] .search-result-details {
+  background-color: #282c34;
+  color: #fff;
+}
